# open-pulse-sources

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  set-vscode-password.sh
.github/workflows/: ci.yml
config/index/: dockerhub.yaml  epfl_graph.yaml  ethz_research_collection.yaml  github_organizations.yaml  github_repos.yaml  github_users.yaml  gitlab_datascience_groups.yaml  gitlab_datascience_projects.yaml  gitlab_datascience_users.yaml  gitlab_epfl_groups.yaml  gitlab_epfl_projects.yaml  gitlab_epfl_users.yaml  gitlab_ethz_groups.yaml  gitlab_ethz_projects.yaml  gitlab_ethz_users.yaml  huggingface.yaml  huggingface_datasets.yaml  huggingface_models.yaml  huggingface_organizations.yaml  huggingface_papers.yaml  huggingface_spaces.yaml  huggingface_users.yaml  infoscience.yaml  oamonitor.yaml  openalex.yaml  orcid.yaml  renkulab.yaml  ror.yaml  snsf.yaml  swissubase.yaml  zenodo_communities.yaml  zenodo_records.yaml
config/seeds/: README.md  dockerhub.txt  ethz_research_collection.txt  github_organizations.txt  github_repos.txt  github_users.txt  huggingface_datasets.txt  huggingface_models.txt  huggingface_organizations.txt  huggingface_papers.txt  huggingface_spaces.txt  huggingface_users.txt  oamonitor.txt  openalex.txt  orcid.txt  renkulab.txt  swissubase.txt  zenodo_records.txt
docs/: communities-index.md  discover-hydrate.md  epfl-graph-disciplines.md  federated-search.md  gitlab-index.md  huggingface-index.md  index-store-naming.md  openalex-index.md  rag-indices.md  swissubase-index.md  zenodo-index.md
open_pulse_sources/common/: __init__.py  cache.py  query_log.py  selenium_fetch.py
open_pulse_sources/common/canonicalization/: __init__.py  dockerhub.py  doi.py  ethz.py  github.py  gitlab.py  huggingface.py  id_resolution.py  infoscience.py  orcid.py  snsf.py  string_utils.py
open_pulse_sources/common/detection/: __init__.py  github_url_classifier.py  models.py
open_pulse_sources/common/providers/: __init__.py  base.py  orcid_oauth.py  orcid_provider.py  rate_limiter.py
open_pulse_sources/index/: __init__.py  _snapshot.py
open_pulse_sources/index/_federated/: __init__.py  __main__.py  bootstrap.py  cli.py  dh_registry.py  entity.py  maintenance.py  manifest.py  protocols.py  registry.py  search.py  structured_query.py
open_pulse_sources/index/_github_accounts_base/: __init__.py  config_base.py  embed_base.py  paths_base.py  retrieval_base.py  storage_base.py
open_pulse_sources/index/_gitlab_base/: client.py  config_base.py  group_embed.py  group_ingest.py  group_retrieval.py  group_schema.sql  group_store.py  models.py  paths_base.py  project_embed.py  project_ingest.py  project_retrieval.py  project_schema.sql  project_store.py  user_embed.py  user_ingest.py  user_retrieval.py  user_schema.sql  user_store.py
open_pulse_sources/index/_huggingface_base/: __init__.py  client.py  config_base.py
open_pulse_sources/index/_rcp/: __init__.py  embed_client.py  reranker_client.py
open_pulse_sources/index/_shared/: doi.py
open_pulse_sources/index/dockerhub/: __init__.py  config.py  models.py  paths.py
open_pulse_sources/index/epfl_graph/: __init__.py  __main__.py  cli.py  config.py  models.py  paths.py
open_pulse_sources/index/ethz_research_collection/: __init__.py  __main__.py  _federated.py  build.py  chunker.py  cli.py  config.py  discover.py  dspace.py  extract_matches.py  extract_relations.py  fetch_related.py  models.py  parsers.py  paths.py  pipeline.py  rerank.py  store.py  synth_orgs.py  text_fetch.py
open_pulse_sources/index/github_organizations/: __init__.py  config.py  models.py  paths.py
open_pulse_sources/index/github_repos/: __init__.py  __main__.py  _federated.py  api.py  cli.py  config.py  models.py  paths.py
open_pulse_sources/index/orcid/: api.py  (+7 more)
open_pulse_sources/module/: __init__.py
open_pulse_sources/service/: __init__.py  api.py  api_models.py  app.py  auth.py
scripts/: build_links_index.py  check_import_closure.py  check_wheel_assets.py  dump_link_articles.py  migrate_monolith_to_split.py  reingest_indices.py
tests/: __init__.py
tests/index/: test_query_adhoc_sandbox.py  test_snapshot.py
tests/service/: conftest.py  test_api_manifest.py  test_api_snsf_grants.py  test_dockerhub_index.py  test_embed_step_snapshot.py  test_error_mapping.py  test_huggingface_models_lineage.py  test_index_github_organizations.py  test_index_github_users.py  test_index_huggingface_datasets.py  test_index_huggingface_models.py  test_index_huggingface_organizations.py  test_index_huggingface_papers.py  test_index_huggingface_spaces.py  test_index_huggingface_users.py  test_indices_compact.py  test_indices_freshness_and_zenodo_communities_search.py  test_indices_gitlab_endpoints.py  test_indices_reset.py  test_indices_reset_api.py  test_indices_stats_endpoint.py  test_ingest_limits.py  test_ingest_pool.py
tools/deploy/: docker-compose.yml
tools/image/: Dockerfile
(+506 files in other folders)
